# grpc_exercise

./: CMakeLists.txt  README.md  main.cpp
greetings/: CMakeLists.txt  greetings_client.h  greetings_server.h
greetings/proto/: greetings.proto
server/: CMakeLists.txt  Server.cpp  Server.h
